# stackr

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SIGNING-POLICY.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  config_gen.rs  db.rs  defender.rs  download.rs  hosts.rs  job.rs  lib.rs  main.rs  manifest.rs  models.rs  paths.rs  php_ini.rs  scaffold.rs  state.rs  sysreq.rs  tls.rs  tray.rs
src-tauri/src/commands/: config.rs  downloader.rs  logs.rs  mod.rs  php.rs  projects.rs  services.rs  tools.rs
src/components/: AllExtensionsModal.tsx  ConfigEditorModal.tsx  ConfirmDialog.tsx  FirstRunModal.tsx  InstallModal.tsx  NewProjectWizard.tsx
src/components/Layout/: Sidebar.tsx  Titlebar.tsx
src/components/ui/: Logo.tsx  ModalBackdrop.tsx  Monogram.tsx  ProgressBar.tsx  ScreenHeader.tsx  Select.tsx  ServiceCards.tsx  Spinner.tsx  Toaster.tsx  Toggle.tsx
src/data/: catalog.ts
src/lib/: api.ts  desktopShell.ts  projectVisual.ts  serviceStatus.ts  styles.ts  updater.ts
src/pages/: Cache.tsx  Databases.tsx  Logs.tsx  Mail.tsx  PHP.tsx  Projects.tsx  Servers.tsx  Settings.tsx
src/store/: useStore.ts
src/types/: index.ts
