[package]
name = "stackr"
version = "0.2.0"
description = "Stackr — local PHP development environment manager for Windows"
authors = ["Stackr"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stackr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "deflate"] }
futures-util = "0.3"
zip = "2"
sha2 = "0.10"
hex = "0.4"
# Local CA + per-domain leaf certs for HTTPS. `ring` backend to reuse the crypto
# lib rustls already pulls (avoids aws-lc-rs and its nasm build requirement).
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
] }
winreg = "0.52"
webview2-com = "0.38"
# webview2-com 0.38 exposes its COM interfaces via windows-core 0.61; the cast in
# lockdown_webview needs the matching Interface trait (our `windows` dep is 0.58).
windows-core = "0.61"
